# mnist_etc

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  afterclone_hwcheck.sh  conf.dvc  data.dvc  docker-compose.yaml  export_model.py  generate_serializable_data.py  infer.py  main.py  models.py  names.py  noprotect_reconstruction.py  pyproject.toml  requirements.txt  run_server.py  train.py
.dvc/: config
artifacts/: .gitignore  weights.h5
hill_climbing/: __init__.py
models/: __init__.py  autoencoder.py  classifier.py
outputs/2023-11-30/02-12-07/.hydra/: config.yaml  hydra.yaml
outputs/2023-11-30/02-23-54/.hydra/: config.yaml  hydra.yaml
outputs/2023-11-30/03-42-51/.hydra/: config.yaml  hydra.yaml
outputs/2023-11-30/03-45-03/.hydra/: config.yaml  hydra.yaml
outputs/2023-11-30/03-46-33/.hydra/: config.yaml  hydra.yaml
outputs/2023-11-30/03-50-13/.hydra/: config.yaml  hydra.yaml  overrides.yaml
train/: autoencoder.py  classifier.py  names.py
train_/: __init__.py  autoencoder.py  classifier.py  names.py
triton/: docker-compose.yaml  model_repository.dvc  requirements.txt
